--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Art&amp;Design</string>
+    <string name="app_name">Art&amp;Shop</string>
     <string name="about">About Art&amp;Design</string>
     <string name="button_allow">Allow</string>
     <string name="button_deny">Deny</string>
